[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"

[project]
name = "rstms-etherscan-python"
authors = [
  {name = "Panagiotis-Christos Kotsias", email = "kotsias.pan@gmail.com"},
  {name = "Matt Krueger", email = "mkrueger@rstms.net"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["etherscan", "api", "fork"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
  ]
dynamic = ["version", "description"]

dependencies = [
    "requests"
  ]

[tool.flit.module]
name = "etherscan"

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "coverage",
    "flake8",
    "flake8-length",
    "flit",
    "isort",
    "pdbpp",
    "pyrate-limiter",
    "pytest",
    "pytest-datadir",
  ]
docs = [
    "m2r2",
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme"
  ]

[project.urls]
  Home = "https://github.com/rstms/etherscan-python"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
